after alignment fix v1

--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,10 @@ body{
 
 main{
   background-color: #F5F5F5;
-  height: 400px;
-  max-width: 800px;
+  max-height: 100vh;
+  max-width: 100vw;
   border-radius: 5px; 
-  padding: 20px;
+  padding: 30vh 10vw;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -30,26 +30,31 @@ main > h3, p{
 text-align:center;
 }
 
+.game-discription{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.game-titile{
+font-size: 30px;
+}
 
 /* dice style */
 
 
-.die-style{
-  font-size: 2rem;
-}
 
 .compo-container{
   margin-top: 20px;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  gap:20px;
+  gap:3vw;
 }
 
 .die-style{
+font-size: 1.6rem;
 box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
 border-radius: 10px;
-height: 50px;
-width: 50px;
+height: 6vh;
+width: 10vw;
 display: flex;
 align-items: center;
 justify-content: center;
@@ -59,6 +64,7 @@ cursor: pointer;
 /* ROLL Button */
 
 .rollButton{
+margin-top: 30px;
 cursor: pointer;
 font-size: 16.38px;
 font-weight: bold;
